# co-sim-platform

./: .gitmodules  README.txt  setup.sh
guest_sw_stack/: build_guest_sw_stack.sh
simulator/: build_simulator.sh
simulator/soc/: CMakeLists.txt  bus.hh  comm_proto.hh  cosim_bridge.cc  cosim_bridge.hh  debugger.hh  ip.cc  ip.hh  ram.cc  ram.hh  soc_top.cc  test_device.cc  test_device.hh
simulator/soc/test/: test_fifo.cc
src/hw/pciemu/: meson.build
test/arch/: build_initial_rootfs.sh  build_riscv64_rootfs.sh
test/arch/riscv64/: qemu_run_riscv_tcg.sh
test/arch/x86_64/: qemu_run_x86_kvm.sh  qemu_run_x86_tcg.sh
test/arch/x86_64/ESP/EFI/boot/: grub.cfg
test/arch/x86_64/rootfs/etc/: fstab  inittab
test/arch/x86_64/rootfs/etc/init.d/: rcS
test/arch/x86_64/rootfs/spin/: spin_CLH  spin_MCS  spin_TAS
test/linux_drivers/: build_drivers.sh
test/x86_64/: qemu_run_x86_kvm.sh
test/x86_64/ESP/EFI/boot/: bootx64.efi
test/x86_64/rootfs/: hello
test/x86_64/rootfs/spin/: a.out  spin_TTAS  spin_ticket  编译方法.txt
